# boostbyparallel

./: .gitignore  LICENSE.md  README.md  cllibrary.cpp  cllibrary.h  opencl_check.cpp  test.ppm  vecAdd.cl  vecOp.cpp  vecOp.h
cmake/: FindOpenCL.cmake  FindOpenCL_32.cmake
convobuild/: CMakeCache.txt  Makefile  cmake_install.cmake  convolution
convolution/: CMakeLists.txt  Convolution.cl  Convolution.cpp
convolution/OpenCLConvolution/: CMakeLists.txt  Convolution.cpp
convolution/OpenCLConvolution/.svn/: entries
convolution/OpenCLInfo/.svn/: entries
kernels/: XnTypes.h  image.cl  segmentLabelMap_kernel.cl  vecAdd.cl
macbuild/: CMakeCache.txt  Makefile  boostbyparallel  cmake_install.cmake
samples/: kernel.cl  matrixmultiplication.cpp
samples_opencl/.svn/: entries
samples_opencl/cmake/.svn/: entries
samples_opencl/khronos/CL/.svn/: entries
samples_opencl/src/.svn/: entries
samples_opencl/src/Chapter_10/GLinterop/.svn/: entries
samples_opencl/src/Chapter_11/D3Dinterop/.svn/: entries
samples_opencl/src/Chapter_12/Sinewave/.svn/: entries
samples_opencl/src/Chapter_12/VectorAdd/.svn/: entries
samples_opencl/src/Chapter_14/histogram/.svn/: entries
samples_opencl/src/Chapter_16/Dijkstra/.svn/: entries
samples_opencl/src/Chapter_19/oclFlow/.svn/: entries
samples_opencl/src/Chapter_22/.svn/: entries
src/: .cllibrary.cpp.swp  .gpu_info.cpp.swp  .gpu_info.h.swp  .maincontroller.h.swp  CMakeLists.txt  cllibrary.cpp  cllibrary.h  gpu_info.cpp  gpu_info.h  header.h  image_manipulation.cpp  image_manipulation.h  main.cpp  maincontroller.cpp  maincontroller.h  output.ppm  vecOp.h
test/: .hello.c.swp  CMakeLists.txt  hello.c
testbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  hello
(+6 files in other folders)
